--- a/mailscanner/etc/spam.assassin.prefs.conf
+++ b/mailscanner/etc/spam.assassin.prefs.conf
@@ -299,4 +299,5 @@ envelope_sender_header X-yoursite-MailScanner-From
 #
 header MS_FOUND_SPAMVIRUS exists:X-MailScanner-SpamVirus-Report
 score  MS_FOUND_SPAMVIRUS 3.0
+score BAYES_00 0.1
 
